--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanoss-quickscan",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A simple desktop application to use SCANOSS OSS KB to scan your files.",
   "main": "main.js",
   "scripts": {
@@ -75,5 +75,11 @@
     "dmg": {
       "sign": false
     }
+  },
+  "jest": {
+    "verbose": true,
+    "testMatch": [
+      "**/tests/*_test.js"
+    ]
   }
 }
